--- a/InstaClone/Base.lproj/Main.storyboard
+++ b/InstaClone/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LNp-Tk-ccL">
-                                <rect key="frame" x="135.5" y="242" width="50" height="36"/>
+                                <rect key="frame" x="136" y="242" width="50" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                 <state key="normal" title="Lock">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5cO-rx-23x">
-                                <rect key="frame" x="123.5" y="364" width="73" height="36"/>
+                                <rect key="frame" x="124" y="364" width="73" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                 <state key="normal" title="Logout">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -177,26 +177,45 @@
                                     <action selector="removePhoto:" destination="4O6-NU-BaO" eventType="touchUpInside" id="6cc-8e-U8b"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hZ-uC-m2h">
+                                <rect key="frame" x="16" y="432" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bAS-a6-6j8">
+                                <rect key="frame" x="16" y="394" width="137" height="30"/>
+                                <state key="normal" title="Help Me Tag People"/>
+                                <connections>
+                                    <action selector="tagPeople:" destination="4O6-NU-BaO" eventType="touchUpInside" id="zgR-Zr-L5n"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="bAS-a6-6j8" firstAttribute="leading" secondItem="9ZP-sh-f4a" secondAttribute="leadingMargin" id="3KW-rW-yC8"/>
+                            <constraint firstItem="7hZ-uC-m2h" firstAttribute="leading" secondItem="9ZP-sh-f4a" secondAttribute="leadingMargin" id="5lT-43-8wS"/>
                             <constraint firstItem="Gwg-av-9jj" firstAttribute="top" secondItem="BCx-LA-Sg0" secondAttribute="bottom" constant="21" id="9vF-yp-qfC"/>
                             <constraint firstItem="w7I-VA-rMU" firstAttribute="leading" secondItem="9ZP-sh-f4a" secondAttribute="leadingMargin" id="B3O-0e-N8u"/>
                             <constraint firstItem="Gwg-av-9jj" firstAttribute="leading" secondItem="9ZP-sh-f4a" secondAttribute="leading" constant="10" id="FvC-7T-tap"/>
+                            <constraint firstItem="7hZ-uC-m2h" firstAttribute="top" secondItem="bAS-a6-6j8" secondAttribute="bottom" constant="8" id="G7t-hV-aHO"/>
                             <constraint firstItem="w7I-VA-rMU" firstAttribute="top" secondItem="OFn-n0-Bqo" secondAttribute="bottom" constant="15" id="HZB-6n-80v"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BCx-LA-Sg0" secondAttribute="trailing" id="J8W-ZA-wf2"/>
                             <constraint firstItem="Gwg-av-9jj" firstAttribute="centerX" secondItem="9ZP-sh-f4a" secondAttribute="centerX" id="Nga-Lx-jzD"/>
                             <constraint firstItem="U5j-7h-1jQ" firstAttribute="trailing" secondItem="9ZP-sh-f4a" secondAttribute="trailingMargin" id="VBK-rV-YBO"/>
                             <constraint firstAttribute="trailing" secondItem="Gwg-av-9jj" secondAttribute="trailing" constant="10" id="lKR-I7-X6E"/>
+                            <constraint firstItem="7hZ-uC-m2h" firstAttribute="trailing" secondItem="9ZP-sh-f4a" secondAttribute="trailingMargin" id="nNk-GP-ueP"/>
                             <constraint firstItem="ecn-pv-dhR" firstAttribute="top" secondItem="Goz-D2-9vu" secondAttribute="bottom" constant="29" id="oHd-zt-QGe"/>
                             <constraint firstItem="BCx-LA-Sg0" firstAttribute="top" secondItem="OFn-n0-Bqo" secondAttribute="bottom" constant="15" id="qt5-eM-kzr"/>
                             <constraint firstItem="Goz-D2-9vu" firstAttribute="leading" secondItem="9ZP-sh-f4a" secondAttribute="leadingMargin" id="sF1-06-ULe"/>
+                            <constraint firstItem="bAS-a6-6j8" firstAttribute="top" secondItem="Gwg-av-9jj" secondAttribute="bottom" constant="8" id="x9F-e7-aJW"/>
                             <constraint firstItem="ecn-pv-dhR" firstAttribute="top" secondItem="U5j-7h-1jQ" secondAttribute="bottom" constant="29" id="ye4-p0-4Sg"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Camera" image="camera" selectedImage="camera-selected" id="toh-QD-6yI"/>
                     <connections>
                         <outlet property="imageToPost" destination="Gwg-av-9jj" id="yjp-hp-oXQ"/>
+                        <outlet property="tagLabel" destination="7hZ-uC-m2h" id="uOh-ZZ-lWL"/>
                         <segue destination="oUL-tK-WOL" kind="presentation" identifier="goToPost" id="UW1-1V-SLi"/>
                     </connections>
                 </viewController>
@@ -242,13 +261,12 @@
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WZ-Eu-TOx">
-                                <rect key="frame" x="221" y="263" width="83" height="30"/>
-                                <state key="normal" title="Help me tag"/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lzc-uw-R6Y">
                                 <rect key="frame" x="196" y="402" width="108" height="30"/>
                                 <state key="normal" title="Get my lcoation"/>
+                                <connections>
+                                    <action selector="getLocation:" destination="oUL-tK-WOL" eventType="touchUpInside" id="bDv-us-AqK"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag People" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-Di-Wtq">
                                 <rect key="frame" x="16" y="266" width="85" height="21"/>
@@ -280,6 +298,13 @@
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JW6-xs-4pS">
+                                <rect key="frame" x="271" y="35" width="33" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Post">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -292,18 +317,17 @@
                             <constraint firstItem="OYd-ve-AbG" firstAttribute="leading" secondItem="X8g-G9-zAv" secondAttribute="leading" id="MS5-OR-FiO"/>
                             <constraint firstItem="crG-Fc-tlk" firstAttribute="leading" secondItem="rNY-1X-JIu" secondAttribute="leadingMargin" id="MVh-8y-KOY"/>
                             <constraint firstItem="zEq-Di-Wtq" firstAttribute="top" secondItem="OYd-ve-AbG" secondAttribute="bottom" constant="78" id="MzG-5X-caP"/>
-                            <constraint firstItem="Ffm-6k-Mmu" firstAttribute="trailing" secondItem="2WZ-Eu-TOx" secondAttribute="trailing" id="O1A-c4-KVl"/>
                             <constraint firstItem="wtq-ra-Dbo" firstAttribute="trailing" secondItem="rNY-1X-JIu" secondAttribute="trailingMargin" id="OQh-Lh-hgI"/>
-                            <constraint firstItem="2WZ-Eu-TOx" firstAttribute="top" secondItem="Ffm-6k-Mmu" secondAttribute="bottom" constant="27" id="P9q-fQ-S37"/>
                             <constraint firstItem="lzc-uw-R6Y" firstAttribute="top" secondItem="wtq-ra-Dbo" secondAttribute="bottom" constant="25" id="XJE-FT-LfL"/>
                             <constraint firstItem="zEq-Di-Wtq" firstAttribute="leading" secondItem="rNY-1X-JIu" secondAttribute="leadingMargin" id="XeZ-mh-zb8"/>
                             <constraint firstItem="44p-0I-iQA" firstAttribute="leading" secondItem="rNY-1X-JIu" secondAttribute="leadingMargin" id="YFa-XJ-iG3"/>
-                            <constraint firstItem="wtq-ra-Dbo" firstAttribute="top" secondItem="2WZ-Eu-TOx" secondAttribute="bottom" constant="4" id="YrE-GL-Hww"/>
                             <constraint firstItem="44p-0I-iQA" firstAttribute="top" secondItem="lzc-uw-R6Y" secondAttribute="bottom" constant="8" id="arO-su-ict"/>
+                            <constraint firstItem="wtq-ra-Dbo" firstAttribute="top" secondItem="zEq-Di-Wtq" secondAttribute="bottom" constant="10" id="bF2-1P-pJn"/>
                             <constraint firstItem="Ffm-6k-Mmu" firstAttribute="top" secondItem="OYd-ve-AbG" secondAttribute="top" id="dxD-Ah-AR2"/>
                             <constraint firstItem="OYd-ve-AbG" firstAttribute="top" secondItem="X8g-G9-zAv" secondAttribute="bottom" constant="43" id="eig-ct-UEH"/>
                             <constraint firstItem="crG-Fc-tlk" firstAttribute="top" secondItem="wtq-ra-Dbo" secondAttribute="bottom" constant="30" id="f3M-Gg-7he"/>
-                            <constraint firstItem="2WZ-Eu-TOx" firstAttribute="trailing" secondItem="rNY-1X-JIu" secondAttribute="trailingMargin" id="hnO-sf-vHw"/>
+                            <constraint firstItem="JW6-xs-4pS" firstAttribute="top" secondItem="Nht-e9-7xM" secondAttribute="bottom" constant="15" id="gmd-pP-5sp"/>
+                            <constraint firstItem="JW6-xs-4pS" firstAttribute="trailing" secondItem="rNY-1X-JIu" secondAttribute="trailingMargin" id="iAS-cK-leX"/>
                             <constraint firstItem="Ffm-6k-Mmu" firstAttribute="leading" secondItem="OYd-ve-AbG" secondAttribute="trailing" constant="7" id="snw-U0-Nwj"/>
                             <constraint firstItem="OYd-ve-AbG" firstAttribute="leading" secondItem="wtq-ra-Dbo" secondAttribute="leading" id="ud9-fv-LHV"/>
                             <constraint firstItem="OYd-ve-AbG" firstAttribute="leading" secondItem="zEq-Di-Wtq" secondAttribute="leading" id="wc7-u7-W0N"/>
@@ -314,6 +338,8 @@
                     <connections>
                         <outlet property="captionTextView" destination="Ffm-6k-Mmu" id="ErI-b6-Ygr"/>
                         <outlet property="imageToPost" destination="OYd-ve-AbG" id="hV7-0X-Snj"/>
+                        <outlet property="locationTextView" destination="44p-0I-iQA" id="eQD-g3-Sfx"/>
+                        <outlet property="tagTextView" destination="wtq-ra-Dbo" id="xkO-iB-cVT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NT9-CT-EFl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -479,7 +505,7 @@
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.30000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Qfg-s8-E1S">
-                                <rect key="frame" x="46.5" y="223" width="233" height="30"/>
+                                <rect key="frame" x="47" y="223" width="233" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="233" id="HeQ-l4-BRz"/>
                                 </constraints>
@@ -488,7 +514,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.30000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="gNu-bN-nz7">
-                                <rect key="frame" x="46.5" y="267" width="233" height="30"/>
+                                <rect key="frame" x="47" y="267" width="233" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="c78-hx-de8"/>
                                     <constraint firstAttribute="width" constant="233" id="tnc-FU-U20"/>
@@ -498,7 +524,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMk-6C-Qeb">
-                                <rect key="frame" x="46.5" y="324" width="233" height="30"/>
+                                <rect key="frame" x="47" y="324" width="233" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="233" id="PIi-qC-4mt"/>
@@ -519,7 +545,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sBg-yi-Jz6">
-                                <rect key="frame" x="108.5" y="404" width="109" height="27"/>
+                                <rect key="frame" x="109" y="404" width="109" height="27"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                 <state key="normal" title="get help signing in">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
